# RandX

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_8md.html  RandX.hpp  RandX_8hpp.html  RandX_8hpp.js  RandX_8hpp__incl.map  RandX_8hpp__incl.md5  RandX_8hpp_source.html  RandX_Cpp17.hpp  RandX__Cpp17_8hpp.html  RandX__Cpp17_8hpp.js  RandX__Cpp17_8hpp__incl.map  RandX__Cpp17_8hpp__incl.md5  RandX__Cpp17_8hpp_source.html  Random.hpp  XoshiroCpp.hpp  annotated.html  annotated_dup.js  benchmark.cpp  classRandX_1_1ChaCha20-members.html  classRandX_1_1ChaCha20.html  classRandX_1_1ChaCha20.js  classRandX_1_1RomuDuoJr-members.html  classRandX_1_1RomuDuoJr.html  classRandX_1_1RomuDuoJr.js  classRandX_1_1RomuDuoJr_a145c8fa4eb697e9b9a2ebc126e0aaaf1_cgraph.map  classRandX_1_1RomuDuoJr_a145c8fa4eb697e9b9a2ebc126e0aaaf1_cgraph.md5  classRandX_1_1RomuDuoJr_a2e598b524b565114fb3aca184a282f1d_cgraph.map  classRandX_1_1RomuDuoJr_a2e598b524b565114fb3aca184a282f1d_cgraph.md5  classRandX_1_1RomuDuoJr_a85ed974a21c86e8b7c62d0871efb3e09_cgraph.map  classRandX_1_1RomuDuoJr_a85ed974a21c86e8b7c62d0871efb3e09_cgraph.md5  classRandX_1_1RomuDuoJr_a8d61f769f8c0d2faf01c09c823671cfd_cgraph.map  classRandX_1_1RomuDuoJr_a8d61f769f8c0d2faf01c09c823671cfd_cgraph.md5  classRandX_1_1RomuDuoJr_a918c08ebb19697503c59be4d97600a7d_cgraph.map  classRandX_1_1RomuDuoJr_a918c08ebb19697503c59be4d97600a7d_cgraph.md5  classRandX_1_1RomuDuoJr_ad0cb40612bfda6579e947cadeb7a3bea_cgraph.map  (+521 more)
.github/workflows/: benchmark.yml  ci.yml  packaging-validation.yml  practrand-nightly.yml
cmake/: RandXConfig.cmake.in  xoshiroConfig.cmake.in
docs/: RELEASING.md
examples/: chacha20_csprng.cpp  compile_time.cpp  engine_management.cpp  multi_stream.cpp  weighted_select.cpp
packaging/vcpkg/versions/: baseline.fragment.json  randx.json
ports/randx/: portfile.cmake  vcpkg.json
ports/xoshiro-cpp/: portfile.cmake  vcpkg.json
search/: all_0.js  all_1.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_21.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  concepts_0.js  concepts_1.js  concepts_2.js  concepts_3.js  concepts_4.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  (+48 more)
tools/pract_rand/: README.md  download_practrand.sh  gen_practrand_stream.cpp  run_practrand.py
